--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"mitulgolakiya/laravel-api-generator": "1.3.*",
 		"illuminate/html":"5.0.*",
-		"fzaninotto/faker":"1.5.*@dev"
+		"fzaninotto/faker":"1.5.*@dev",
+		"maatwebsite/excel": "~2.0.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
