--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 		"mitulgolakiya/laravel-api-generator": "1.3.*",
 		"illuminate/html":"5.0.*",
 		"fzaninotto/faker":"1.5.*@dev",
-		"maatwebsite/excel": "~2.0.0"
+		"maatwebsite/excel": "~2.0.0",
+		"guzzlehttp/guzzle": "~4.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
