--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
 		"illuminate/html":"5.0.*",
 		"fzaninotto/faker":"1.5.*@dev",
 		"maatwebsite/excel": "~2.0.0",
-		"guzzlehttp/guzzle": "~4.0",
-		"barryvdh/laravel-dompdf": "0.6.*"
+		"guzzlehttp/guzzle": "~4.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
